--- a/public/stylesheets/active_scaffold/default/stylesheet.css
+++ b/public/stylesheets/active_scaffold/default/stylesheet.css
@@ -87,6 +87,10 @@ background-position: 1px 50%;
 background-repeat: no-repeat;
 }
 
+.view .active-scaffold-header div.actions a {
+float: left;
+}
+
 .blue-theme .active-scaffold-header div.actions a {
 color: #fff;
 }
@@ -394,7 +398,7 @@ margin: 0 7px;
 border: none;
 }
 
-.active-scaffold .empty-message {
+.active-scaffold .empty-message, .active-scaffold .filtered-message {
 background-color: #e8e8e8;
 padding: 4px;
 text-align: center;
@@ -597,6 +601,11 @@ padding: 6px 0;
 float: left;
 }
 
+.active-scaffold .form dd {
+margin: 0;
+}
+
+
 .active-scaffold .description {
 color: #999;
 font-size: 10px;
@@ -709,7 +718,7 @@ display: block;
 
 .active-scaffold .sub-form table td {
 border: none;
-background-color: none;
+background-color: transparent;
 padding: 1px;
 vertical-align: top;
 color: #999;
